# ege-skill

./: README.md
docs/: technical_requirements.md
docs/pic/: README.md
examService/: .gitignore  Dockerfile  docker-compose.yml
examService/conf/: exam_service.env
examService/src/: pyproject.toml
examService/src/exam_service/: asgi.py  local_config.py  settings.py  urls.py  wsgi.py  yasg.py
examService/src/exam_service/exam/: admin.py  apps.py  views.py
examService/src/exam_service/exam/models/: __init__.py  exam.py
resultService/: DockerfIle  README.md  docker-compose.yml  pom.xml
resultService/src/main/java/com/result/service/resultService/: ResultServiceApplication.java
resultService/src/main/java/com/result/service/resultService/exam/: Exam.java  ExamController.java  ExamRepository.java  ExamResult.java  ExamResultController.java  ExamResultRepository.java  ExamResultService.java  ExamService.java
resultService/src/main/java/com/result/service/resultService/question/: Question.java  QuestionController.java  QuestionRepository.java  QuestionResult.java  QuestionResultController.java  QuestionResultRepository.java  QuestionResultService.java  QuestionService.java
resultService/src/main/resources/: application.properties
resultService/src/test/java/com/result/service/resultService/: ResultServiceApplicationTests.java
resultService/src/test/java/com/result/service/resultService/exam/: ExamControllerTest.java  ExamResultControllerTest.java
resultService/src/test/java/com/result/service/resultService/question/: QuestionControllerTest.java  (+1 more)
